--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -46,6 +46,7 @@ header {
     /* Define a largura da logo */
     margin-top: 30px;
     /* Define a margem superior da logo */
+    margin-left: -70px;
 }
 
 nav ul {
@@ -757,6 +758,7 @@ Algumas instruções para por o texto e a imagem da propaganda da pagina sobre a
     /* Adiciona uma margem à esquerda de 50px */
     font-size: 20px;
     /* Define o tamanho da fonte como 20px */
+    
 }
 
 .contact-info div {
@@ -769,6 +771,7 @@ Algumas instruções para por o texto e a imagem da propaganda da pagina sobre a
     /* Adiciona uma margem à esquerda de 80px */
     font-size: 18px;
     /* Define o tamanho da fonte como 18px */
+    color: #ffffff;
 }
 
 .link-verde2 {
@@ -791,6 +794,15 @@ Algumas instruções para por o texto e a imagem da propaganda da pagina sobre a
     margin: 1px;
     /* Adiciona uma margem de 1px */
     color: #007BFF;
+    /* Define a cor do texto como azul */
+}
+
+.link-cinza {
+    font-size: 20px;
+    /* Define o tamanho da fonte como 20px */
+    margin: 1px;
+    /* Adiciona uma margem de 1px */
+    color: #8c9196;
     /* Define a cor do texto como azul */
 }
 
@@ -821,8 +833,6 @@ Algumas instruções para por o texto e a imagem da propaganda da pagina sobre a
 
 /*----------------------------------------------------------------------------------------------------------------------------------------------*/
 /* página do app */
-/* página do app */
-/* Test Gamer */
 
 /* Estilo da área principal do jogo */
 .game-board {
@@ -1220,6 +1230,7 @@ button:hover {
     /* Centraliza os itens horizontalmente */
     width: 100%;
     /* Define a largura como 100% */
+    height: 100%;
     padding: 20px;
     /* Adiciona um preenchimento de 20px */
     background-color: #f8f9fa;
@@ -1246,7 +1257,7 @@ button:hover {
 
 /* Estilo para o logo da aplicação */
 .img-logo4 {
-    width: 120px;
+    width: 100px;
     /* Define a largura do logo */
 }
 
@@ -1414,6 +1425,7 @@ button:hover {
     /* Define a cor da borda */
     width: 100%;
     /* Define a largura como 100% */
+    max-height: 60%;
     padding: 18px;
     /* Adiciona um preenchimento de 18px */
     display: flex;
@@ -1450,6 +1462,7 @@ button:hover {
 
 /* Estilo para o título do log */
 .titulo-log {
+    margin-top: 50px;
     color: #00b100;
     /* Define a cor do texto */
 }
