Adicionando projeto ao novo repositório

--- a/resources/css/gamea.css
+++ b/resources/css/gamea.css
@@ -1,10 +1,13 @@
 /* Estilo para o título principal */
-* {
-    margin: 0; /* Remove a margem padrão de todos os elementos */
-    padding: 0; /* Remove o padding padrão de todos os elementos */
-    box-sizing: border-box; /* Define o box-sizing como border-box para todos os elementos */
-}
 
+* {
+    margin: 0;
+    /* Remove a margem padrão de todos os elementos */
+    padding: 0;
+    /* Remove o padding padrão de todos os elementos */
+    box-sizing: border-box;
+    /* Define o box-sizing como border-box para todos os elementos */
+}
 
 
 * {
@@ -30,7 +33,7 @@ h1 {
 .botaoj {
     padding: 10px 20px; /* Define o padding interno do botão */
     margin-top: 20px; /* Define a margem superior do botão */
-    background-color: #4CAF50; /* Define a cor de fundo do botão */
+    background-color: rgb(0, 116, 194); /* Define a cor de fundo do botão */
     color: white; /* Define a cor do texto do botão */
     border: none; /* Remove a borda do botão */
     cursor: pointer; /* Define o cursor como ponteiro ao passar o mouse */
@@ -39,7 +42,7 @@ h1 {
 
 /* Estilo para o botão ao passar o mouse */
 button:hover {
-    background-color: #45a049; /* Muda a cor de fundo do botão ao passar o mouse */
+    background-color: rgb(0, 116, 194); /* Muda a cor de fundo do botão ao passar o mouse */
 }
 
 /* Estilos dos Blocos */
